# py_ionization

./: .gitignore  README.md  pyproject.toml
examples/: compare_with_py_space_zc.py  example_charge_exchange_from_swia.py  example_electron_impact_from_swea.py  example_photoionization_from_maven_euv.py  example_plot_cross_sections.py
matlab/: README.md
matlab/+py_ionization/: data_path.m  energy_bin_width.m  read_x1e16_table.m  solid_angle_from_theta_range.m
matlab/+py_ionization/+charge_exchange/: cex_cross_section.m  cex_prod_rate.m  cross_section.m  production_rate.m
matlab/+py_ionization/+electron_impact/: cross_section.m  ei_cross_section.m  ei_prod_rate.m  production_rate.m
matlab/+py_ionization/+photoionization/: cross_section.m  ph_cross_section.m  ph_prod_rate.m  production_rate.m
matlab/examples/: compare_matlab_with_python_reference.m  example_plot_cross_sections.m  make_python_reference_for_matlab_compare.py  python_reference_for_matlab_compare.mat
py_ionization/: __init__.py  _utils.py
py_ionization/charge_exchange/: README.md  __init__.py  cross_section.py  production_rate.py
py_ionization/electron_impact/: README.md  __init__.py  cross_section.py  production_rate.py
py_ionization/photoionization/: README.md  __init__.py  cross_section.py  production_rate.py
tests/: test_against_py_space_zc.py
